--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="sortcut icon" href="./images/instagram-icon.png" type="image/png" />
     <title>Instagram</title>
 </head>
 <body>
